--- a/lazyscroll/index.html
+++ b/lazyscroll/index.html
@@ -261,7 +261,7 @@ var count = 0;
     var lazyScroll = new LazyScroll({
             outerid : 'outer-list',
             innerid : 'inner-list',
-            elementH : $("#goods-0").get(0).clientHeight,
+            hElement : $("#goods-0").get(0),
             ehratio : 2,
             haveMore : true,
             loadingcb : getMoreGoods
